--- a/package.json
+++ b/package.json
@@ -6,16 +6,23 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint . --ext .js"
   },
   "dependencies": {
     "expo": "~47.0.9",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-paper": "^5.1.3",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-safe-area-view": "^1.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@react-native/eslint-config": "^0.72.1",
+    "eslint": "^8.31.0",
+    "prettier": "^2.8.1"
   },
   "private": true
 }
